examples/test/testpolicy8521.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8521
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key6: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value35
          key1: value25
      podSelector:
        matchLabels:
          key6: value2
          key32: value17
